a lot of changes. added server and websocket connect

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+    <script src="socket.io.min.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
